fix enumerated slider item positioning on mobile

--- a/source/sass/modules/_slider.scss
+++ b/source/sass/modules/_slider.scss
@@ -319,7 +319,7 @@
             @include wrap();
         }
         .slider__belt {
-            transform: translate3d(calc(-100vw), 0px, 0px);
+            transform: none;
         }
     }
 }
